--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preload" 
-      href="/src/components/assets/myAvatar.svg"
-      as="image"
-      type="image/svg+xml" />
-      <link rel="preload" 
-      href="https://francogutierrez.netlify.app/static/media/myAvatar.2923d8ea56a1693b6ca2f829afeb8b97.svg"
-      as="image"
-      type="image/svg+xml" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-    <title>Franco Gutierrez Portfolio</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preload" href="/src/components/assets/myAvatar.svg" as="image" type="image/svg+xml" />
+  <link rel="preload"
+    href="https://francogutierrez.netlify.app/static/media/myAvatar.2923d8ea56a1693b6ca2f829afeb8b97.svg" as="image"
+    type="image/svg+xml" />
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet" />
+  <title>Franco Gutierrez Portfolio</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
